Fixade css (overflow, c och stäng meny.)
alltid divar som spökar. mvh
blä

--- a/DanielAngebrand.com/assets/css/styles.css
+++ b/DanielAngebrand.com/assets/css/styles.css
@@ -428,7 +428,7 @@ body.dark-theme {
 }
 
 .skills__info{
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2.5rem 2rem;
 }
 .skills__data{
@@ -921,10 +921,11 @@ z-index: 1;
 .scrollup:hover{
   transform: translateY(-.25rem);
 }
-
+/*== SHOW SCROLL =====*/
 .show-scroll{
   bottom: 7.5rem;
 }
+
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 340px){
